--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="row">
 
                 <!-- Video Item 0 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/0.mp4" type="video/mp4">
@@ -134,7 +134,7 @@
                 </div>
 
                 <!-- Video Item 1 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/1.mp4" type="video/mp4">
@@ -143,7 +143,7 @@
                 </div>
 
                 <!-- Video Item 2 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/2.mp4" type="video/mp4">
@@ -152,7 +152,7 @@
                 </div>
 
                 <!-- Video Item 3 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/3.mp4" type="video/mp4">
@@ -165,7 +165,7 @@
             <div class="row">
 
                 <!-- Video Item 4 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/4.mp4" type="video/mp4">
@@ -174,7 +174,7 @@
                 </div>
 
                 <!-- Video Item 5 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/5.mp4" type="video/mp4">
@@ -183,7 +183,7 @@
                 </div>
 
                 <!-- Video Item 6 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/6.mp4" type="video/mp4">
@@ -192,7 +192,7 @@
                 </div>
 
                 <!-- Video Item 7 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/7.mp4" type="video/mp4">
@@ -205,7 +205,7 @@
             <div class="row">
 
                 <!-- Video Item 8 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/8.mp4" type="video/mp4">
@@ -214,7 +214,7 @@
                 </div>
 
                 <!-- Video Item 9 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/9.mp4" type="video/mp4">
@@ -223,7 +223,7 @@
                 </div>
 
                 <!-- Video Item 10 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/10.mp4" type="video/mp4">
@@ -232,7 +232,7 @@
                 </div>
 
                 <!-- Video Item 11 -->
-                <div class="col-md-3 col-sm-6 mb-4">
+                <div class="col-6 col-sm-4 col-md-3 mb-4">
                     <div class="embed-responsive embed-responsive-4by3">
                         <video class="embed-responsive-item" autoplay loop muted>
                             <source src="assets/mosaique/11.mp4" type="video/mp4">
