--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
         </div>
         <p class="lead">
-            <a href="https://github.com/quentin-leboutet/MIDGArD" class="btn btn-outline-dark mx-2">
+            <a href="https://openreview.net/pdf?id=re2jPCnzkA" class="btn btn-outline-dark mx-2">
                 <i class="fas fa-file-alt"></i> Paper
             </a>
             <a href="https://github.com/quentin-leboutet/MIDGArD" class="btn btn-outline-dark mx-2">
