--- a/index.html
+++ b/index.html
@@ -379,12 +379,10 @@
         <div class="container">
             <h2 class="mb-4">Citation</h2>
             <pre class="bg-white p-3">
-@inproceedings{leboutet2024midgard,
-  title = {MIDGArD: Modular Interpretable Diffusion over Graphs for Articulated Designs},
-  author = {Leboutet, Quentin and Wiedemann, Nina and Cai, Zhipeng and Paulitsch, Michael and Yuan, Kai},
-  booktitle = {Advances in Neural Information Processing Systems},
-  pages = {xxxx--xxxx},
-  year = {2024},
+@inproceedings{leboutetmidgard,
+  title={MIDGArD: Modular Interpretable Diffusion over Graphs for Articulated Designs},
+  author={Leboutet, Quentin and Wiedemann, Nina and Paulitsch, Michael and Yuan, Kai and others},
+  booktitle={The Thirty-eighth Annual Conference on Neural Information Processing Systems}
 }
             </pre>
         </div>
