--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
             </div>
         </div>
         <p class="lead">
-            <a href="https://openreview.net/pdf?id=re2jPCnzkA" class="btn btn-outline-dark mx-2">
+            <a href="https://proceedings.neurips.cc/paper_files/paper/2024/file/0318de478e18308a5f64297f618299d3-Paper-Conference.pdf" class="btn btn-outline-dark mx-2">
                 <i class="fas fa-file-alt"></i> Paper
             </a>
             <a href="https://github.com/quentin-leboutet/MIDGArD" class="btn btn-outline-dark mx-2">
                 <i class="fab fa-github"></i> Code
             </a>
-            <a href="index.html" class="btn btn-outline-dark mx-2">
+            <a href="https://nips.cc/virtual/2024/poster/93424" class="btn btn-outline-dark mx-2">
                 <i class="fas fa-video"></i> Video
             </a>
         </p>
@@ -379,11 +379,17 @@
         <div class="container">
             <h2 class="mb-4">Citation</h2>
             <pre class="bg-white p-3">
-@inproceedings{leboutetmidgard,
-  title={MIDGArD: Modular Interpretable Diffusion over Graphs for Articulated Designs},
-  author={Leboutet, Quentin and Wiedemann, Nina and Paulitsch, Michael and Yuan, Kai and others},
-  booktitle={The Thirty-eighth Annual Conference on Neural Information Processing Systems}
-}
+@inproceedings{leboutet2024midgard,
+    author = {Leboutet, Quentin and Wiedemann, Nina and cai, zhipeng and Paulitsch, Michael and Yuan, Kai},
+    booktitle = {Advances in Neural Information Processing Systems},
+    editor = {A. Globerson and L. Mackey and D. Belgrave and A. Fan and U. Paquet and J. Tomczak and C. Zhang},
+    pages = {1556--1585},
+    publisher = {Curran Associates, Inc.},
+    title = {MIDGArD: Modular Interpretable Diffusion over Graphs for Articulated Designs},
+    url = {https://proceedings.neurips.cc/paper_files/paper/2024/file/0318de478e18308a5f64297f618299d3-Paper-Conference.pdf},
+    volume = {37},
+    year = {2024}
+    }
             </pre>
         </div>
     </section>
