--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <meta property="og:type" content="video.other" />
     <meta property="og:title" content="MIDGArD" />
     <meta property="og:description" content="MIDGArD, 2024." />
-    <meta property="og:url" content="https://github.com/quentin-leboutet/MIDGArD" />
-    <meta property="og:image" content="https://github.com/quentin-leboutet/MIDGArD/assets/images/midgard_samples.png" />
-    <meta property="article:publisher" content="https://github.com/quentin-leboutet/MIDGArD" />
+    <meta property="og:url" content="https://quentin-leboutet.github.io/MIDGArD" />
+    <meta property="og:image" content="https://quentin-leboutet.github.io/MIDGArD/assets/MIDGARD.png" />
+    <meta property="article:publisher" content="https://quentin-leboutet.github.io/MIDGArD" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="MIDGArD" />
     <meta name="twitter:description" content="3D Asset Generation." />
-    <meta name="twitter:url" content="https://github.com/quentin-leboutet/MIDGArD" />
-    <meta name="twitter:image" content="https://dreamfusion3d.github.io/assets/images/dreamfusion_samples.png" />
+    <meta name="twitter:url" content="https://quentin-leboutet.github.io/MIDGArD" />
+    <meta name="twitter:image" content="https://quentin-leboutet.github.io/MIDGArD/assets/MIDGARD.png" />
 
     <!-- Scripts -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XB3PR2Y1TQ"></script>
@@ -108,7 +108,7 @@
             <a href="https://proceedings.neurips.cc/paper_files/paper/2024/file/0318de478e18308a5f64297f618299d3-Paper-Conference.pdf" class="btn btn-outline-dark mx-2">
                 <i class="fas fa-file-alt"></i> Paper
             </a>
-            <a href="https://github.com/quentin-leboutet/MIDGArD" class="btn btn-outline-dark mx-2">
+            <a href="https://github.com/isl-org/MIDGArD" class="btn btn-outline-dark mx-2">
                 <i class="fab fa-github"></i> Code
             </a>
             <a href="https://nips.cc/virtual/2024/poster/93424" class="btn btn-outline-dark mx-2">
